experimental/reference/standalone/3nic+webserver/PAYG/azuredeploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "2.0.0.0",
    "parameters": {
        "adminUsername": {
            "defaultValue": "azureuser",
            "metadata": {
                "description": "User name for the Virtual Machine"
            },
            "type": "string"
        },
        "adminPassword": {
            "metadata": {
                "description": "Password to login to the Virtual Machine"
            },
            "type": "securestring"
        },
        "dnsLabel": {
            "defaultValue": "REQUIRED",
            "metadata": {
                "description": "Unique DNS Name for the Public IP used to access the Virtual Machine"
            },
            "type": "string"
        },
        "dnsLabelPrefix": {
            "defaultValue": "REQUIRED",
            "metadata": {
                "description": "Unique DNS Name prefix for the Public IP(s) used to access the data plan for application traffic objects(Virtual Servers, etc...)"
            },
            "type": "string"
        },
        "instanceName": {
            "defaultValue": "f5vm01",
            "metadata": {
                "description": "Name of the VM"
            },
            "type": "string"
        },
        "instanceType": {
            "allowedValues": [
                "Standard_A3",
                "Standard_A4",
                "Standard_A5",
                "Standard_A6",
                "Standard_A7",
                "Standard_A8",
                "Standard_A9",
                "Standard_D3",
                "Standard_D4",
                "Standard_D11",
                "Standard_D12",
                "Standard_D13",
                "Standard_D14",
                "Standard_D3_v2",
                "Standard_D4_v2",
                "Standard_D5_v2",
                "Standard_D11_v2",
                "Standard_D12_v2",
                "Standard_D13_v2",
                "Standard_D14_v2",
                "Standard_D15_v2",
                "Standard_F4",
                "Standard_F8"
            ],
            "defaultValue": "Standard_D3_v2",
            "metadata": {
                "description": "Size of the VM"
            },
            "type": "string"
        },
        "imageName": {
            "allowedValues": [
                "Good",
                "Better",
                "Best"
            ],
            "defaultValue": "Good",
            "metadata": {
                "description": "F5 SKU(IMAGE) to Deploy"
            },
            "type": "string"
        },
        "bigIpVersion": {
            "allowedValues": [
                "latest",
                "13.0.000",
                "12.1.22"
            ],
            "defaultValue": "13.0.000",
            "metadata": {
                "description": "F5 BIG-IP Version to use"
            },
            "type": "string"
        },
        "licensedBandwidth": {
            "allowedValues": [
                "25m",
                "200m",
                "1g"
            ],
            "defaultValue": "200m",
            "metadata": {
                "description": "PAYG licensed bandwidth(Mbps) image to deploy"
            },
            "type": "string"
        },
        "numberOfExternalIps": {
            "allowedValues": [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8
            ],
            "defaultValue": 1,
            "metadata": {
                "description": "The number of public/private IP's to deploy for the application traffic(external) nic on the BIG-IP to be used for virtual servers."
            },
            "type": "int"
        },
        "vnetAddressPrefix": {
            "defaultValue": "10.0",
            "metadata": {
                "description": "The start of the CIDR block used by the BIG-IP's when create the Vnet and subnets.  What is supplied MUST be just the first two octets of the /16 virtual network that will be created.  Such as '10.0' or 192.168', etc..."
            },
            "type": "string"
        },

"webServer": {
    "defaultValue": "Both",
    "allowedValues": [
    "Linux",
    "Windows",
    "Both"
    ],
    "metadata": {
    "description": "Web Server(s) to be deployed behind F5"
    },
    "type": "string"
},
"vsPort": {
    "defaultValue": "80",
    "allowedValues": [
    "80",
    "443"
    ],
    "metadata": {
    "description": "Virtual Server Port to Use on F5 to connect to the web server(s)"
    },
    "type": "string"
},

        "restrictedSrcAddress": {
            "defaultValue": "*",
            "metadata": {
                "description": "Restricts management access to a specific network or address. Enter a IP address or address range in CIDR notation, or asterisk for all sources"
            },
            "type": "string"
        },
        "tagValues": {
            "defaultValue": {
                "application": "APP",
                "cost": "COST",
                "environment": "ENV",
                "group": "GROUP",
                "owner": "OWNER"
            },
            "type": "object"
        }
    },
    "variables": {
        "bigIpNicPortMap": {
            "1": {
                "Port": "[parameters('bigIpVersion')]"
            },
            "2": {
                "Port": "443"
            },
            "3": {
                "Port": "443"
            },
            "4": {
                "Port": "443"
            },
            "5": {
                "Port": "443"
            },
            "6": {
                "Port": "443"
            }
        },
        "bigIpVersionPortMap": {
            "12.1.21": {
                "Port": 443
            },
            "12.1.22": {
                "Port": 443
            },
            "13.0.000": {
                "Port": 8443
            },
            "443": {
                "Port": 443
            },
            "latest": {
                "Port": 8443
            }
        },
        "apiVersion": "2015-06-15",
        "computeApiVersion": "2015-06-15",
        "networkApiVersion": "2015-06-15",
        "storageApiVersion": "2015-06-15",
        "location": "[resourceGroup().location]",
        "singleQuote": "'",
        "f5CloudLibsTag": "v2.3.0",
        "verifyHash": "[concat(variables('singleQuote'), 'cli script /Common/verifyHash {\nproc script::run {} {\n        if {[catch {\n            set hashes(f5-cloud-libs.tar.gz) 489d460d2e5fcd401ce12f19b1d753a6bee30483cd0bf2b7548b7f8fe3caf5b727af96f013733cbd08b0c109e0cf535a29288d473b84cc834369204d5be5edc9\n            set hashes(f5-cloud-libs-aws.tar.gz) 0b602d069a6647e8268c7afc5201259058c4df545cdee5212bf1f6c2d24b11421201282c11e047b1df9b144a012312de45a07fcf28bd0d8cd3d3a86698774925\n           [...]
        "installCloudLibs": "[concat(variables('singleQuote'), '#!/bin/bash\necho about to execute\nchecks=0\nwhile [ $checks -lt 120 ]; do echo checking mcpd\n/usr/bin/tmsh -a show sys mcp-state field-fmt | grep -q running\nif [ $? == 0 ]; then\necho mcpd ready\nbreak\nfi\necho mcpd not ready yet\nlet checks=checks+1\nsleep 1\ndone\necho loading verifyHash script\n/usr/bin/tmsh load sys config merge file /config/verifyHash\nif [ $? != 0 ]; then\necho cannot validate signature of /config/verifyH [...]
        "newStorageAccountName": "[concat(uniquestring(resourceGroup().id), 'stor')]",
        "storageAccountType": "Standard_LRS",
        "dnsLabel": "[toLower(parameters('dnsLabel'))]",
        "imageNameToLower": "[toLower(parameters('imageName'))]",
        "skuToUse": "[concat('f5-bigip-virtual-edition-', parameters('licensedBandwidth'), '-', variables('imageNameToLower'),'-hourly')]",
        "offerToUse": "f5-big-ip-hourly",
        "bigIpNicPortValue": "[variables('bigIpNicPortMap')['3'].Port]",
        "bigIpMgmtPort": "[variables('bigIpVersionPortMap')[variables('bigIpNicPortValue')].Port]",
        "availabilitySetName": "[concat(variables('dnsLabel'), '-avset')]",
        "nicName": "[concat(variables('dnsLabel'), '-mgmt0')]",
        "defaultGw": "[concat(parameters('vnetAddressPrefix'),'.2.1')]",
        "virtualNetworkName": "[concat(variables('dnsLabel'), '-vnet')]",
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
        "vnetAddressPrefix": "[concat(parameters('vnetAddressPrefix'),'.0.0/16')]",
        "nsgID": "[resourceId('Microsoft.Network/networkSecurityGroups/',concat(variables('dnsLabel'),'-nsg'))]",
        "publicIPAddressName": "[concat(variables('dnsLabel'), '-mgmt-pip')]",
        "publicIPAddressId": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
        "publicIPAddressType": "Static",
        "subnetName": "[concat(variables('dnsLabel'),'-subnet')]",
        "subnetId": "[concat(variables('vnetId'), '/subnets/', variables('subnetName'))]",
        "subnetPrefix": "[concat(parameters('vnetAddressPrefix'), '.1.0/24')]",
        "subnetPrivateAddress": "[concat(parameters('vnetAddressPrefix'), '.1.4')]",
        "instanceName": "[toLower(parameters('instanceName'))]",
        "dnsLabelPrefix": "[toLower(parameters('dnsLabelPrefix'))]",
        "nsg2ID": "[resourceId('Microsoft.Network/networkSecurityGroups/',concat(variables('dnsLabel'),'-nsg2'))]",
        "publicIPAddressNamePrefix": "[concat(variables('dnsLabel'), '-ext-pip')]",
        "publicIPAddressIdPrefix": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressNamePrefix'))]",
        "extNicName": "[concat(variables('dnsLabel'), '-ext0')]",
        "extSubnetName": "[concat(variables('dnsLabel'),'-subnet2')]",
        "extSubnetId": "[concat(variables('vnetId'), '/subnets/', variables('extsubnetName'))]",
        "extSubnetPrefix": "[concat(parameters('vnetAddressPrefix'), '.2.0/24')]",
        "extSubnetPrivateAdress": "[concat(parameters('vnetAddressPrefix'), '.2.4')]",
        "extSubnetPrivateAdressPrefix": "[concat(parameters('vnetAddressPrefix'), '.2.')]",
        "intNicName": "[concat(variables('dnsLabel'), '-int0')]",
        "intSubnetName": "[concat(variables('dnsLabel'),'-subnet3')]",
        "intSubnetId": "[concat(variables('vnetId'), '/subnets/', variables('intsubnetName'))]",
        "intSubnetPrefix": "[concat(parameters('vnetAddressPrefix'), '.3.0/24')]",
        "intSubnetPrivateAdress": "[concat(parameters('vnetAddressPrefix'), '.3.4')]",
        "numberOfExternalIps": "[add(parameters('numberOfExternalIps'), 1)]",


"apiVersionLinked": "2015-01-01",
"extSubnetPrivateAdressVip": "[concat(parameters('vnetAddressPrefix'), '.2.5')]",
"dnsLabelVip": "[concat(variables('dnsLabelPrefix'), '2')]",
"intPrivateAddressWindows": "[concat(parameters('vnetAddressPrefix'), '.3.100')]",
"intPrivateAddressLinux": "[concat(parameters('vnetAddressPrefix'), '.3.101')]",
"singleQuoteWeb": "'",
"WebServerPort": "80",
"Linux": "[concat('-d ', variables('instanceName'), ' -n ', variables('intPrivateAddressLinux'), ' -h ', variables('WebServerPort'),  ' -u ', parameters('adminUsername'), ' -p ', parameters('adminPassword'), ' -v ', variables('extSubnetPrivateAdressVip'), ' -c ', variables('bigIpMgmtPort'), ' -s ', parameters('vsPort'))]",
"Windows": "[concat('-d ', variables('instanceName'), ' -n ', variables('intPrivateAddressWindows'), ' -h ', variables('WebServerPort'),  ' -u ', parameters('adminUsername'), ' -p ', parameters('adminPassword'), ' -v ', variables('extSubnetPrivateAdressVip'), ' -c ', variables('bigIpMgmtPort'), ' -s ', parameters('vsPort'))]",
"Both": "[concat('-d ', variables('instanceName'), ' -n \"', variables('intPrivateAddressLinux'), ',', variables('intPrivateAddressWindows'), '\" -h ', variables('WebServerPort'), ' -u ', parameters('adminUsername'), ' -p ', parameters('adminPassword'), ' -v ', variables('extSubnetPrivateAdressVip'), ' -c ', variables('bigIpMgmtPort'), ' -s ', parameters('vsPort'))]",
"commandArgsWeb": "[variables(parameters('webServer'))]",
"80": "http://",
"443": "https://",
"httpType": "[variables(parameters('vsPort'))]",
"gitHubLocation": "https://raw.githubusercontent.com/F5Networks/f5-azure-arm-templates/sevedge/experimental/reference/standalone/3nic%2Bwebserver/",
"webtemplatelink": "[concat(variables('gitHubLocation'),  'nested/',  parameters('webServer'),'WebServer.json')]",


        "ipconfigArray": [
            {
                "name": "[concat(variables('instanceName'), '-ipconfig1')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 2)]"
                    },
                    "primary": true,
                    "privateIPAddress": "[variables('extSubnetPrivateAdress')]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            },
            {
                "name": "[concat(variables('instanceName'), '-ipconfig2')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 3)]"
                    },
                    "primary": false,
                    "privateIPAddress": "[concat(variables('extSubnetPrivateAdressPrefix'), 5)]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            },
            {
                "name": "[concat(variables('instanceName'), '-ipconfig3')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 4)]"
                    },
                    "primary": false,
                    "privateIPAddress": "[concat(variables('extSubnetPrivateAdressPrefix'), 6)]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            },
            {
                "name": "[concat(variables('instanceName'), '-ipconfig4')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 5)]"
                    },
                    "primary": false,
                    "privateIPAddress": "[concat(variables('extSubnetPrivateAdressPrefix'), 7)]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            },
            {
                "name": "[concat(variables('instanceName'), '-ipconfig5')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 6)]"
                    },
                    "primary": false,
                    "privateIPAddress": "[concat(variables('extSubnetPrivateAdressPrefix'), 8)]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            },
            {
                "name": "[concat(variables('instanceName'), '-ipconfig6')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 7)]"
                    },
                    "primary": false,
                    "privateIPAddress": "[concat(variables('extSubnetPrivateAdressPrefix'), 9)]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            },
            {
                "name": "[concat(variables('instanceName'), '-ipconfig7')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 8)]"
                    },
                    "primary": false,
                    "privateIPAddress": "[concat(variables('extSubnetPrivateAdressPrefix'), 10)]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            },
            {
                "name": "[concat(variables('instanceName'), '-ipconfig8')]",
                "properties": {
                    "PublicIpAddress": {
                        "Id": "[concat(variables('publicIPAddressIdPrefix'), 9)]"
                    },
                    "primary": false,
                    "privateIPAddress": "[concat(variables('extSubnetPrivateAdressPrefix'), 11)]",
                    "privateIPAllocationMethod": "Static",
                    "subnet": {
                        "id": "[variables('extSubnetId')]"
                    }
                }
            }
        ]
    },
    "resources": [
        {
            "apiVersion": "[variables('networkApiVersion')]",
            "location": "[variables('location')]",
            "name": "[variables('publicIPAddressName')]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[variables('dnsLabel')]"
                },
                "idleTimeoutInMinutes": 30,
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]"
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/publicIPAddresses"
        },
        {
            "apiVersion": "[variables('networkApiVersion')]",
            "copy": {
                "count": "[variables('numberOfExternalIps')]",
                "name": "pipcopy"
            },
            "location": "[variables('location')]",
            "name": "[concat(variables('publicIPAddressNamePrefix'), copyIndex(2))]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[concat(variables('dnsLabelPrefix'), copyIndex(1))]"
                },
                "idleTimeoutInMinutes": 30,
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]"
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/publicIPAddresses"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "location": "[variables('location')]",
            "name": "[variables('virtualNetworkName')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetPrefix')]"
                        }
                    },
                    {
                        "name": "[variables('extSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('extSubnetPrefix')]"
                        }
                    },
                    {
                        "name": "[variables('intSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('intSubnetPrefix')]"
                        }
                    }
                ]
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/virtualNetworks"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "dependsOn": [
                "[variables('vnetId')]",
                "[variables('publicIPAddressId')]",
                "[variables('nsgID')]"
            ],
            "location": "[variables('location')]",
            "name": "[variables('nicName')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[concat(variables('instanceName'), '-ipconfig1')]",
                        "properties": {
                            "PublicIpAddress": {
                                "Id": "[variables('publicIPAddressId')]"
                            },
                            "privateIPAddress": "[variables('subnetPrivateAddress')]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[variables('subnetId')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[variables('nsgID')]"
                }
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/networkInterfaces"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "dependsOn": [
                "[variables('vnetId')]",
                "[concat(variables('nsg2ID'))]",
                "pipcopy"
            ],
            "location": "[variables('location')]",
            "name": "[variables('extNicName')]",
            "properties": {
                "ipConfigurations": "[take(variables('ipconfigArray'),variables('numberofExternalIps'))]",
                "networkSecurityGroup": {
                    "id": "[concat(variables('nsg2ID'))]"
                }
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/networkInterfaces"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "dependsOn": [
                "[variables('vnetId')]"
            ],
            "location": "[variables('location')]",
            "name": "[variables('intNicName')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[concat(variables('instanceName'), '-ipconfig1')]",
                        "properties": {
                            "privateIPAddress": "[variables('intSubnetPrivateAdress')]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[variables('intSubnetId')]"
                            }
                        }
                    }
                ]
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/networkInterfaces"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "location": "[variables('location')]",
            "name": "[concat(variables('dnsLabel'), '-nsg')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "mgmt_allow_https",
                        "properties": {
                            "access": "Allow",
                            "description": "",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "[variables('bigIpMgmtPort')]",
                            "direction": "Inbound",
                            "priority": 101,
                            "protocol": "TCP",
                            "sourceAddressPrefix": "[parameters('restrictedSrcAddress')]",
                            "sourcePortRange": "*"
                        }
                    },
                    {
                        "name": "ssh_allow_22",
                        "properties": {
                            "access": "Allow",
                            "description": "",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "22",
                            "direction": "Inbound",
                            "priority": 102,
                            "protocol": "TCP",
                            "sourceAddressPrefix": "[parameters('restrictedSrcAddress')]",
                            "sourcePortRange": "*"
                        }
                    }
                ]
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/networkSecurityGroups"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "location": "[variables('location')]",
            "name": "[concat(variables('dnsLabel'), '-nsg2')]",
            "properties": {
                "securityRules": [
{
"name": "traffic_allow_443",
"properties": {
    "description": "",
    "priority": 103,
    "sourceAddressPrefix": "[parameters('restrictedSrcAddress')]",
    "sourcePortRange": "*",
    "destinationAddressPrefix": "*",
    "destinationPortRange": "443",
    "protocol": "TCP",
    "direction": "Inbound",
    "access": "Allow"
}
},
{
"name": "traffic_allow_80",
"properties": {
    "description": "",
    "priority": 104,
    "sourceAddressPrefix": "[parameters('restrictedSrcAddress')]",
    "sourcePortRange": "*",
    "destinationAddressPrefix": "*",
    "destinationPortRange": "80",
    "protocol": "TCP",
    "direction": "Inbound",
    "access": "Allow"
}
}
                ]
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Network/networkSecurityGroups"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "location": "[variables('location')]",
            "name": "[variables('availabilitySetName')]",
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Compute/availabilitySets"
        },
        {
            "apiVersion": "[variables('storageApiVersion')]",
            "location": "[variables('location')]",
            "name": "[variables('newStorageAccountName')]",
            "properties": {
                "accountType": "[variables('storageAccountType')]"
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Storage/storageAccounts"
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "dependsOn": [
                "[concat('Microsoft.Storage/storageAccounts/', variables('newStorageAccountName'))]",
                "[concat('Microsoft.Compute/availabilitySets/', variables('availabilitySetName'))]",
                "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]",
                "[concat('Microsoft.Network/networkInterfaces/', variables('extNicName'))]",
                "[concat('Microsoft.Network/networkInterfaces/', variables('intNicName'))]"
            ],
            "location": "[variables('location')]",
            "name": "[variables('instanceName')]",
            "plan": {
                "name": "[variables('skuToUse')]",
                "product": "[variables('offerToUse')]",
                "publisher": "f5-networks"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',variables('availabilitySetName'))]"
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('http://',variables('newStorageAccountName'),'.blob.core.windows.net')]"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('instanceType')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('extNicName'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('intNicName'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "osProfile": {
                    "adminPassword": "[parameters('adminPassword')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "computerName": "[variables('instanceName')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "offer": "[variables('offerToUse')]",
                        "publisher": "f5-networks",
                        "sku": "[variables('skuToUse')]",
                        "version": "[parameters('bigIpVersion')]"
                    },
                    "osDisk": {
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "name": "osdisk",
                        "vhd": {
                            "uri": "[concat('http://',variables('newStorageAccountName'), '.blob.core.windows.net/vhds/', variables('instanceName'), '.vhd')]"
                        }
                    }
                }
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Compute/virtualMachines"
        },
        {
            "apiVersion": "2016-03-30",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', variables('instanceName'))]"
            ],
            "location": "[variables('location')]",
            "name": "[concat(variables('instanceName'),'/start')]",
            "properties": {
                "protectedSettings": {
                    "commandToExecute": "[concat('mkdir /config/cloud && cp f5-cloud-libs.tar.gz* /config/cloud; /usr/bin/install -b -m 755 /dev/null /config/verifyHash; /usr/bin/install -b -m 755 /dev/null /config/installCloudLibs.sh; /usr/bin/install -b -m 400 /dev/null /config/cloud/passwd; IFS=', variables('singleQuote'), '%', variables('singleQuote'), '; echo -e ', variables('verifyHash'), ' >> /config/verifyHash; echo -e ', variables('installCloudLibs'), ' >> /config/installCloudLibs.sh; e [...]
                },
                "publisher": "Microsoft.Azure.Extensions",
                "settings": {
                    "fileUris": [
                        "[concat('https://raw.githubusercontent.com/F5Networks/f5-cloud-libs/', variables('f5CloudLibsTag'), '/dist/f5-cloud-libs.tar.gz')]",
                        "[concat(variables('gitHubLocation'),  'scripts/deploy_iapp_http.sh')]"
                    ]
                },
                "type": "CustomScript",
                "typeHandlerVersion": "2.0"
            },
            "tags": {
                "application": "[parameters('tagValues').application]",
                "costCenter": "[parameters('tagValues').cost]",
                "environment": "[parameters('tagValues').environment]",
                "group": "[parameters('tagValues').group]",
                "owner": "[parameters('tagValues').owner]"
            },
            "type": "Microsoft.Compute/virtualMachines/extensions"
        },

{
    "apiVersion": "[variables('apiVersionLinked')]",
    "name": "linkedTemplateWebServer",
    "type": "Microsoft.Resources/deployments",
    "dependsOn": [
        "[variables('vnetId')]"
    ],
    "properties": {
    "mode": "incremental",
    "templateLink": {
        "uri": "[variables('webtemplatelink')]",
        "contentVersion": "1.0.0.0"
    },
    "parameters": {
        "privateAddressWindows":{"value": "[variables('intPrivateAddressWindows')]"},
        "privateAddressLinux":{"value": "[variables('intPrivateAddressLinux')]"},
        "webSubnetId":{"value": "[variables('intSubnetId')]"},
        "adminUsername":{"value": "[parameters('adminUsername')]"},
        "adminPassword":{"value": "[parameters('adminPassword')]"},
        "dnsLabel":{"value": "[variables('dnsLabel')]"},
        "instanceType":{"value": "[parameters('instanceType')]"},
        "gitHubLocation":{"value": "[variables('gitHubLocation')]"}
    }
    }
}


    ],
    "outputs": {
        "GUI-URL": {
            "type": "string",
            "value": "[concat('https://', variables('dnsLabel'), '.', resourceGroup().location, '.cloudapp.azure.com', ':', variables('bigIpMgmtPort'))]"
        },
        "SSH-URL": {
            "type": "string",
            "value": "[concat(variables('dnsLabel'), '.', resourceGroup().location, '.cloudapp.azure.com', ' ',22)]"
        },

"WebServer-URL-Through-F5 ": {
    "type": "string",
    "value": "[concat(variables('httpType'), variables('dnsLabelVip'), '.', resourceGroup().location, '.cloudapp.azure.com')]"
},
"FQDN-Windows-WebServer": {
    "type": "string",
    "value": "[reference('linkedTemplateWebServer').outputs.FQDNWindows.value]"
},
"FQDN-Linux-WebServer": {
    "type": "string",
    "value": "[reference('linkedTemplateWebServer').outputs.FQDNLinux.value]"
}

    }
}
